Fix max-width for imagedisplay on firefox

--- a/src/widgets/ImageDisplay.css
+++ b/src/widgets/ImageDisplay.css
@@ -2,6 +2,7 @@
 .Ldt-ImageDisplay-Container {
     margin: auto;
     height: 100%;
+    max-width: 100%;
 }
 
 .Ldt-ImageDisplay-Image {
